--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <h1>JobTracker Admin Portal</h1>
