--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,54 @@
+
 /* Nav Bar */
 .navbar-nav .nav-item .nav-link.active {
     background-color: #5d85c1;
     color: white;
     border-radius: 5px;
+}
+
+
+.mt-5-bottom-spacing {
+    margin-bottom: 2rem; 
+}
+
+.text-gray {
+    color: gray;
+  }
+
+.text-primary-bold {
+    color: #007bff;
+    font-weight: bold;
+}
+
+.middle-container {
+    margin-bottom: 3rem; 
+  }
+
+  .card-body {
+    display: flex;
+    align-items: start;
+  }
+
+.card-body svg {
+    margin-right: 10px; 
+    width: 75px;
+    height: 75px;
+    fill: none;
+    stroke: #884dc0;
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
+
+.card-body .text-left {
+    text-align: left;
+  }
+
+.footer {
+    position: fixed;
+    /* margin-top: 3rem; */
+    bottom: 0;
+    width: 100%;
 }
 
 /* General table styles */
@@ -34,6 +80,7 @@
 .custom-table-responsive {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+    margin: 0 20px 20px 20px;
 }
 
 /* Table header */
