--- a/views/jobPostings.hbs
+++ b/views/jobPostings.hbs
@@ -7,6 +7,7 @@
 {{!-- NavBar --}}
 <nav class="navbar navbar-expand navbar-light" style="background-color: #e3f2fd;">
   <div class="container-fluid">
+    <span class="navbar-brand mb-0 h1">JobTracker</span>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
